force-app/main/default/objects/Recovery_Job__c/Recovery_Job__c.object-meta.xml
<CustomObject><label>Recovery Job</label><pluralLabel>Recovery Jobs</pluralLabel><nameField><label>Recovery Job Number</label><type>AutoNumber</type><displayFormat>RJ-{00000}</displayFormat></nameField><deploymentStatus>Deployed</deploymentStatus><sharingModel>Private</sharingModel></CustomObject>