force-app/main/default/objects/Recovery_Job__c/fields/Approved_At__c.field-meta.xml
<CustomField><fullName>Approved_At__c</fullName><label>Approved At</label><type>DateTime</type></CustomField>