force-app/main/default/objects/Recovery_Job__c/fields/Approved_By__c.field-meta.xml
<CustomField><fullName>Approved_By__c</fullName><label>Approved By</label><type>Text</type><length>18</length></CustomField>