force-app/main/default/objects/Recovery_Job__c/fields/Dry_Run__c.field-meta.xml
<CustomField><fullName>Dry_Run__c</fullName><label>Dry Run</label><type>Checkbox</type><defaultValue>true</defaultValue></CustomField>