force-app/main/default/objects/Recovery_Job__c/fields/Eligible_Count__c.field-meta.xml
<CustomField><fullName>Eligible_Count__c</fullName><label>Eligible Count</label><type>Number</type><precision>18</precision><scale>0</scale></CustomField>