force-app/main/default/objects/Recovery_Job__c/fields/Failure_Group__c.field-meta.xml
<CustomField><fullName>Failure_Group__c</fullName><label>Failure Group</label><type>Lookup</type><referenceTo>Failure_Group__c</referenceTo><relationshipName>RecoveryJobs</relationshipName><relationshipLabel>Recovery Jobs</relationshipLabel></CustomField>