force-app/main/default/objects/Recovery_Job__c/fields/Idempotency_Key__c.field-meta.xml
<CustomField><fullName>Idempotency_Key__c</fullName><label>Idempotency Key</label><type>Text</type><length>100</length><externalId>true</externalId><unique>true</unique></CustomField>