force-app/main/default/objects/Recovery_Job__c/fields/Previewed_At__c.field-meta.xml
<CustomField><fullName>Previewed_At__c</fullName><label>Previewed At</label><type>DateTime</type></CustomField>