force-app/main/default/objects/Recovery_Job__c/fields/Recovery_Action__c.field-meta.xml
<CustomField><fullName>Recovery_Action__c</fullName><label>Recovery Action</label><type>Lookup</type><referenceTo>Recovery_Action__c</referenceTo><relationshipName>RecoveryJobs</relationshipName><relationshipLabel>Recovery Jobs</relationshipLabel></CustomField>