force-app/main/default/objects/Recovery_Job__c/fields/Requested_Count__c.field-meta.xml
<CustomField><fullName>Requested_Count__c</fullName><label>Requested Count</label><type>Number</type><precision>18</precision><scale>0</scale></CustomField>