force-app/main/default/objects/Recovery_Job__c/fields/Skipped_Count__c.field-meta.xml
<CustomField><fullName>Skipped_Count__c</fullName><label>Skipped Count</label><type>Number</type><precision>18</precision><scale>0</scale></CustomField>