force-app/main/default/objects/Recovery_Job__c/fields/Status__c.field-meta.xml
<CustomField><fullName>Status__c</fullName><label>Status</label><type>Picklist</type><valueSet><valueSetDefinition><value><fullName>Previewed</fullName><default>true</default><label>Previewed</label></value><value><fullName>Approved</fullName><label>Approved</label></value><value><fullName>Queued</fullName><label>Queued</label></value><value><fullName>Paused</fullName><label>Paused</label></value><value><fullName>Cancelled</fullName><label>Cancelled</label></value><value><fullName>Completed</fullName><label>Completed</label></value><value><fullName>Failed</fullName><label>Failed</label></value></valueSetDefinition></valueSet></CustomField>